fix: lock position of preview on screen, so it's always visible

--- a/src/components/watch-preview/watch-preview.module.scss
+++ b/src/components/watch-preview/watch-preview.module.scss
@@ -1,9 +1,11 @@
 .preview {
-  margin: var(--spacing-2) auto;
+  position: fixed;
   background-color: var(--background-color);
 }
 
 .image {
+  margin: 0 auto;
+
   :global {
     .time-active {
       fill: var(--active-time-color);
@@ -41,10 +43,4 @@
       }
     }
   }
-}
-
-.emery {
-  width: min(200px, 100%);
-  max-height: min(228px, 100%);
-  aspect-ratio: 200 / 228;
 }
